# movement-detection

./: .gitignore  README.md
.github/workflows/: TESTING.md  terraform.yml  tests.yml  triggers.yml
components/movement-driver/: CMakeLists.txt  movement-driver.c
components/movement-driver/include/: movement-driver.h
components/mqtt-aws/: CMakeLists.txt  mqtt-aws.c
components/mqtt-aws/certs/: certificate.pem.crt  private.pem.key
components/mqtt-aws/include/: mqtt-aws.h  shared_events.h
components/wifi-driver/: CMakeLists.txt  wifi-driver.c
infrastructure/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/function_lambda/: index.py
infrastructure/modules/dynamodb/: main.tf  outputs.tf  variables.tf
infrastructure/modules/iam/: main.tf  outputs.tf  variables.tf
infrastructure/modules/iot-core/: main.tf  outputs.tf  variables.tf
infrastructure/modules/iot-rules/: main.tf  outputs.tf  variables.tf
infrastructure/modules/s3/: main.tf  outputs.tf  variables.tf
infrastructure/modules/s3-state/: main.tf  outputs.tf  variables.tf
infrastructure/modules/vpc/: main.tf  outputs.tf  variables.tf
main/: CMakeLists.txt  main.c  shared_events.h
tests/component/movement_driver/: CMakeLists.txt  idf_component.yml  test_movement_driver.c
tests/host/: CMakeLists.txt  stub_driver_gpio.c  stub_esp_err.c  stub_esp_log.c  stub_freertos.c
tests/host/include/: stub_driver_gpio.h  stub_esp_err.h  stub_esp_log.h  stub_freertos.h  test_framework.h
tests/host/stubs/: esp_err.h  esp_log.h  fake_esp_stubs.c
tests/host/stubs/driver/: gpio.h
tests/host/stubs/freertos/: FreeRTOS.h  queue.h  task.h
tests/host/test/: CMakeLists.txt  test_movement_driver.c  test_mqtt_aws.c  test_sensor_pipeline.c
tests/integration/: CMakeLists.txt  idf_component.yml  test_integration.c
